--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -4,26 +4,28 @@
     android:id="@+id/containerToolbar"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:id="@+id/containerHeader"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="57dp"
+            android:layout_height="56dp"
             android:theme="@style/AppTheme.AppBarOverlay"
             android:background="@color/colorPrimaryDark">
 
             <TextView
                 android:id="@+id/HeaderTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="36dp"
                 android:text="@string/app_name"
                 style="@style/TxtBtn"
+                android:textAlignment="center"
                 android:textSize="22sp"
                 />
 
@@ -31,10 +33,9 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="8dp"
+            android:layout_height="4dp"
             android:background="@drawable/toolbar_dropshadow"
             android:layout_below="@+id/toolbar"/>
-
 
     </RelativeLayout>
 
