--- a/app/src/main/res/layout/item_breja.xml
+++ b/app/src/main/res/layout/item_breja.xml
@@ -4,10 +4,9 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    card_view:cardCornerRadius="5dp"
+    card_view:cardCornerRadius="2dp"
     card_view:cardElevation="2dp"
     card_view:cardBackgroundColor="@color/colorBgLight"
-    android:layout_marginTop="5dp"
     android:id="@+id/container">
 
     <LinearLayout
@@ -26,18 +25,19 @@
 
             <LinearLayout
                 android:id="@+id/containerImage"
-                android:layout_width="60dp"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginRight="10dp"
                 android:gravity="center_vertical"
                 android:layout_gravity="center_vertical">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imgBeer"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:background="@drawable/beer_example"/>
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/beer_example"
+                    android:scaleType="centerCrop" />
 
             </LinearLayout>
 
@@ -46,7 +46,7 @@
                 android:orientation="vertical"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="9"
+                android:layout_weight="10"
                 android:gravity="center_vertical">
 
 
@@ -84,17 +84,17 @@
 
             <RelativeLayout
                 android:id="@+id/containerImgFav"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:layout_gravity="center_vertical">
 
                 <ImageButton
                     android:id="@+id/btnFav"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:background="@drawable/ic_favorite_border_white_48dp"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_favorite_border_white_36dp"/>
 
             </RelativeLayout>
 
