--- a/app/src/main/res/layout/activity_breja.xml
+++ b/app/src/main/res/layout/activity_breja.xml
@@ -1,26 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorBg">
 
-    <ScrollView
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="270dp"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:contentScrim="?attr/colorPrimaryDark"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="270dp"
+                android:background="@drawable/beer_example"
+                android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax"/>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:theme="@style/AppTheme.AppBarOverlay"
+                app:layout_collapseMode="pin">
+
+            </android.support.v7.widget.Toolbar>
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBg">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="3">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="270dp"
-                android:background="@drawable/beer_example"/>
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -64,7 +93,7 @@
                 android:layout_marginLeft="@dimen/beer_horizontal_margin"
                 android:layout_marginRight="@dimen/beer_horizontal_margin"
                 android:padding="@dimen/beer_horizontal_padding"
-                android:background="@color/colorBgLight">
+                android:background="@color/colorMarromEdt">
 
                 <TextView
                     android:id="@+id/nameBrewer"
@@ -79,7 +108,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="País: Irlanda"
-                    style="@style/OtherDelaisBeer"/>
+                    style="@style/OtherDelaisBeer"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/typeBeer"
@@ -87,7 +117,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:text="Estilo: Classic Irish-Style Dry Stout"
-                    style="@style/OtherDelaisBeer"/>
+                    style="@style/OtherDelaisBeer"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/glassBeer"
@@ -95,7 +126,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:text="Servido em um: Pint XYZ"
-                    style="@style/OtherDelaisBeer"/>
+                    style="@style/OtherDelaisBeer"
+                    android:textStyle="bold"/>
 
             </LinearLayout>
 
@@ -108,15 +140,16 @@
                 android:layout_marginLeft="@dimen/beer_horizontal_margin"
                 android:layout_marginRight="@dimen/beer_horizontal_margin"
                 android:padding="@dimen/beer_horizontal_padding"
-                android:background="@color/colorBgLight">
+                android:background="@color/colorMarromEdt">
 
                 <TextView
                     android:id="@+id/descBeer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
-                    android:text="Sobre a Guinness: Classic Irish-Style Dry Stout Estilo: Classic Irish-Style Dry Stout Estilo: Classic Irish-Style Dry Stout Estilo: Classic Irish-Style Dry Stout Estilo: Classic Irish-Style Dry Stout Estilo: Classic Irish-Style Dry StoutEstilo: Classic Irish-Style Dry Stout Estilo: Classic Irish-Style Dry Stout  Estilo: Classic Irish-Style Dry Stout Estilo: Classic Irish-Style Dry Stout Estilo: Classic Irish-Style Dry Stout"
-                    style="@style/OtherDelaisBeer"/>
+                    android:text=""
+                    style="@style/OtherDelaisBeer"
+                    android:textSize="16sp"/>
 
             </LinearLayout>
 
@@ -126,7 +159,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/beer_horizontal_margin"
                 android:padding="@dimen/beer_horizontal_margin"
-                android:background="@color/colorBgLight">
+                android:background="@color/colorMarromEdt">
 
                 <include layout="@layout/item_breja_relacionado"></include>
 
@@ -137,6 +170,6 @@
         </LinearLayout>
 
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
