--- a/app/src/main/res/layout/item_breja_relacionado.xml
+++ b/app/src/main/res/layout/item_breja_relacionado.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="0dp"
     card_view:cardElevation="0dp"
-    card_view:cardBackgroundColor="@color/colorBgLight"
+    card_view:cardBackgroundColor="@color/colorMarromEdt"
     android:id="@+id/container">
 
     <LinearLayout
