--- a/app/src/main/res/menu/brejas_menu.xml
+++ b/app/src/main/res/menu/brejas_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_fav"
         android:orderInCategory="1"
         android:title="@string/action_fav"
         android:icon="@drawable/ic_favorite_border_white_36dp"
