--- a/app/src/main/res/drawable/rounded_edt_padrao_login.xml
+++ b/app/src/main/res/drawable/rounded_edt_padrao_login.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle" >
-            <corners android:radius="40dp" />
-            <solid android:color="@color/colorBlueFbPressed" />
-        </shape>
-    </item>
     <item android:state_enabled="true">
         <shape android:shape="rectangle" >
             <corners android:radius="40dp" />
-            <solid android:color="@color/colorBlueFb" />
+            <solid android:color="@color/colorMarromEdt" />
         </shape>
     </item>
-
     <item android:state_enabled="false">
         <shape android:shape="rectangle" >
             <corners android:radius="40dp" />
-            <solid android:color="@color/colorBlueFbPressed" />
+            <solid android:color="@color/colorMarromEdtPressed" />
         </shape>
     </item>
 </selector>
