--- a/app/src/main/res/drawable/rounded_btn_facebook_transparent.xml
+++ b/app/src/main/res/drawable/rounded_btn_facebook_transparent.xml
@@ -9,7 +9,7 @@
     <item android:state_enabled="true">
         <shape android:shape="rectangle" >
             <corners android:radius="40dp" />
-            <solid android:color="@color/colorBlueFb" />
+            <solid android:color="@android:color/transparent" />
         </shape>
     </item>
 
