Inclusão de novos fragments e alteração da tela de login e rotina de cadastro.

--- a/app/src/main/res/layout/fragment_lista_cervejas_fav.xml
+++ b/app/src/main/res/layout/fragment_lista_cervejas_fav.xml
@@ -1,10 +1,8 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_listagem_brejas_3"
-    tools:context="br.com.brewjas.ui.fragment.ListaCervejasFragment">
+    android:background="@drawable/bg_listagem_brejas_3">
 
     <LinearLayout
         android:orientation="vertical"
@@ -13,7 +11,7 @@
         android:background="@drawable/bg_transparent_yellow">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/listaBrejas"
+            android:id="@+id/listaBrejasFav"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical">
