--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
+            android:padding="@dimen/login_logo_padding"
             android:gravity="center_horizontal|center_vertical">
 
             <ImageView
