--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,10 +3,13 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="card_horizontal_margin">2dp</dimen>
+    <dimen name="card_horizontal_margin">6dp</dimen>
+    <dimen name="card_vertical_margin">6dp</dimen>
 
     <dimen name="login_horizontal_margin">16dp</dimen>
     <dimen name="login_vertical_margin">8dp</dimen>
+
+    <dimen name="login_logo_padding">24dp</dimen>
 
     <dimen name="beer_horizontal_margin">6dp</dimen>
     <dimen name="beer_vertical_margin">3dp</dimen>
