--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_cadastro"
-    tools:context="br.com.brewjas.ui.activity.RegistroActivity">
+    tools:context=".ui.view.activity.RegistroActivity">
 
     <RelativeLayout
         android:orientation="vertical"
