--- a/app/src/main/res/layout/app_bar_dash_board.xml
+++ b/app/src/main/res/layout/app_bar_dash_board.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="br.com.brewjas.ui.activity.DashBoardActivity">
+    tools:context=".ui.view.activity.DashBoardActivity">
 
     <RelativeLayout
         android:id="@+id/containerHeader"
