--- a/app/src/main/res/layout/content_dash_board.xml
+++ b/app/src/main/res/layout/content_dash_board.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.com.brewjas.ui.activity.DashBoardActivity"
+    tools:context=".ui.view.activity.DashBoardActivity"
     tools:showIn="@layout/app_bar_dash_board">
 
 </RelativeLayout>
