--- a/app/src/main/res/layout/fragment_lista_cervejas.xml
+++ b/app/src/main/res/layout/fragment_lista_cervejas.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_listagem_brejas_3"
-    tools:context="br.com.brewjas.ui.fragment.ListaCervejasFragment">
+    tools:context=".ui.view.fragment.ListaCervejasFragment">
 
     <LinearLayout
         android:orientation="vertical"
