--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.brewjas.ui.fragment.LoginFragment">
+    tools:context=".ui.view.fragment.LoginFragment">
 
     <LinearLayout
         android:orientation="vertical"
