--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="57dp"
+        android:layout_marginTop="56dp"
         android:background="@drawable/bg_transparent_yellow">
 
         <LinearLayout
@@ -123,12 +123,7 @@
     </RelativeLayout>
 
 
-    <include
-        layout="@layout/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="68dp">
-
-    </include>
+    <include layout="@layout/app_bar"/>
 
 
 </RelativeLayout>
