--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -14,18 +14,16 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="57dp"
             android:theme="@style/AppTheme.AppBarOverlay"
             android:background="@color/colorPrimaryDark">
 
             <TextView
                 android:id="@+id/HeaderTitle"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="36dp"
                 android:text="@string/app_name"
                 style="@style/TxtBtn"
-                android:textAlignment="center"
                 android:textSize="22sp"
                 />
 
@@ -33,7 +31,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="4dp"
+            android:layout_height="8dp"
             android:background="@drawable/toolbar_dropshadow"
             android:layout_below="@+id/toolbar"/>
 
