Implementação do Dialog

--- a/app/src/main/res/layout/dialog_fragment.xml
+++ b/app/src/main/res/layout/dialog_fragment.xml
@@ -4,11 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_transparent_yellow"
-    android:id="@+id/containerHelp">
+    android:id="@+id/containerHelp"
+    android:padding="@dimen/activity_horizontal_margin">
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/container"
         android:background="@drawable/style_rounded_box_form"
