--- a/app/src/main/res/layout/loading_dialog.xml
+++ b/app/src/main/res/layout/loading_dialog.xml
@@ -10,6 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:theme="@android:style/Widget.ProgressBar.Large"
+        android:progressDrawable="@drawable/progress"
+        android:indeterminateDrawable="@drawable/progress"/>
 
 </RelativeLayout>
