--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -17,14 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:padding="@dimen/login_logo_padding"
+            android:layout_margin="@dimen/login_logo_padding"
             android:gravity="center_horizontal|center_vertical">
 
             <ImageView
                 android:id="@+id/imgLogo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="40dp"
+                android:layout_margin="@dimen/login_image_logo_padding"
                 android:src="@drawable/logo"/>
 
         </LinearLayout>
@@ -33,7 +33,7 @@
             android:id="@+id/contentPanel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_horizontal_margin"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
             android:gravity="center_horizontal">
 
             <RelativeLayout
@@ -49,10 +49,10 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:layout_marginBottom="@dimen/login_vertical_margin"
-                    android:layout_marginTop="@dimen/login_vertical_margin"
-                    android:layout_marginLeft="@dimen/login_horizontal_margin"
-                    android:layout_marginRight="@dimen/login_horizontal_margin"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin_small"
+                    android:layout_marginTop="@dimen/activity_vertical_margin_small"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:gravity="center_vertical|center_horizontal"
                     android:background="@drawable/rounded_edt_padrao_login">
 
@@ -80,10 +80,10 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:layout_marginBottom="@dimen/login_vertical_margin"
-                    android:layout_marginTop="@dimen/login_vertical_margin"
-                    android:layout_marginLeft="@dimen/login_horizontal_margin"
-                    android:layout_marginRight="@dimen/login_horizontal_margin"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin_small"
+                    android:layout_marginTop="@dimen/activity_vertical_margin_small"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:gravity="center_vertical|center_horizontal"
                     android:layout_below="@id/contentEdt"
                     android:background="@drawable/rounded_btn_facebook">
@@ -94,7 +94,7 @@
                         android:layout_weight="5"
                         android:text="@string/btn_login_fb"
                         style="@style/TxtBtn"
-                        android:paddingLeft="16dp"
+                        android:paddingLeft="@dimen/login_padding_inputs"
                         android:textColor="@color/colorWhite"
                         android:id="@+id/btnFacebook"
                         android:textAlignment="textStart"
@@ -114,16 +114,14 @@
                     android:layout_below="@+id/contentLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/login_vertical_margin"
-                    android:layout_marginTop="@dimen/login_vertical_margin"
-                    android:layout_marginLeft="@dimen/login_horizontal_margin"
-                    android:layout_marginRight="@dimen/login_horizontal_margin"
+                    android:layout_marginTop="@dimen/activity_vertical_margin_small"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:gravity="center_horizontal">
 
                     <Button
-                        android:layout_width="300dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="5dp"
                         android:text="@string/btn_help"
                         style="@style/TxtBtnSmall"
                         android:textColor="@color/colorMarrom"
