--- a/app/src/main/res/layout/item_breja.xml
+++ b/app/src/main/res/layout/item_breja.xml
@@ -3,9 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/card_horizontal_margin"
-    android:layout_marginRight="@dimen/card_horizontal_margin"
     android:layout_marginTop="@dimen/card_vertical_margin"
+    android:layout_marginBottom="@dimen/card_vertical_margin"
     android:id="@+id/container">
 
     <LinearLayout
@@ -20,22 +19,22 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:padding="5dp">
+            android:layout_margin="@dimen/card_horizontal_margin"
+            android:weightSum="3">
 
             <LinearLayout
                 android:id="@+id/containerImage"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginRight="10dp"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_weight="0.7"
+                android:layout_marginRight="@dimen/card_horizontal_margin_small"
                 android:gravity="center_vertical"
                 android:layout_gravity="center_vertical">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imgBeer"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:src="@drawable/beer_example"
                     android:scaleType="centerCrop" />
 
@@ -46,22 +45,22 @@
                 android:orientation="vertical"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:gravity="center_vertical">
-
+                android:layout_weight="2.2"
+                android:gravity="center_vertical"
+                android:layout_marginRight="@dimen/card_horizontal_margin_small">
 
                     <TextView
                         android:id="@+id/nameBeer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Guinness Draught"
+                        android:maxLines="3"
                         style="@style/NameBeer"/>
 
                     <TextView
                         android:id="@+id/nameBrewer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
                         android:text="Guinness"
                         style="@style/NameBrewer"/>
 
@@ -76,17 +75,17 @@
                         android:id="@+id/typeBeer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
                         android:text="Classic Irish-Style Dry Stout"
+                        android:maxLines="2"
                         style="@style/OtherDelaisBeer"/>
 
             </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/containerImgFav"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
                 android:gravity="center_horizontal"
                 android:layout_gravity="center_vertical">
 
@@ -94,7 +93,8 @@
                     android:id="@+id/btnFav"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ic_favorite_border_white_36dp"/>
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_favorite_border_white_36dp"/>
 
             </RelativeLayout>
 
