--- a/app/src/main/res/layout/item_breja_relacionado.xml
+++ b/app/src/main/res/layout/item_breja_relacionado.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    card_view:cardCornerRadius="0dp"
-    card_view:cardElevation="0dp"
-    card_view:cardBackgroundColor="@color/colorMarromEdt"
+    android:background="@color/colorMarromEdt"
     android:id="@+id/container">
 
     <LinearLayout
         android:id="@+id/content"
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin_small">
 
         <LinearLayout
             android:id="@+id/containerHeader"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:padding="5dp"
             android:weightSum="2">
 
             <LinearLayout
                 android:id="@+id/containerImage"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
                 android:gravity="center_vertical"
                 android:layout_gravity="center_horizontal">
 
@@ -46,7 +43,7 @@
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/activity_vertical_margin_small"
                 android:gravity="center_vertical">
 
 
@@ -62,7 +59,6 @@
                         android:id="@+id/nameBrewer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
                         android:text="Guinness"
                         style="@style/NameBrewer"
                         android:textAlignment="center"/>
@@ -71,7 +67,6 @@
                         android:id="@+id/typeBeer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
                         android:text="Classic Irish-Style Dry Stout"
                         style="@style/OtherDelaisBeer"
                         android:textAlignment="center"/>
@@ -84,4 +79,4 @@
     </LinearLayout>
 
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
