--- a/app/src/main/res/layout/nav_header_dash_board.xml
+++ b/app/src/main/res/layout/nav_header_dash_board.xml
@@ -11,10 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:padding="@dimen/activity_horizontal_margin">
 
         <ImageView
             android:id="@+id/imageView"
@@ -60,7 +57,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="4dp"
+        android:layout_height="@dimen/nav_drawer_shadow_size"
         android:background="@drawable/toolbar_dropshadow"
         android:layout_below="@+id/toolbar"/>
 
