--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -3,6 +3,9 @@
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
+    <dimen name="activity_vertical_margin_big">64dp</dimen>
 
     <dimen name="card_horizontal_margin">30dp</dimen>
+
+    <dimen name="activity_vertical_margin_small">16dp</dimen>
 </resources>
