--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,7 +85,7 @@
         <item name="android:textColor">@color/colorMarrom</item>
         <item name="android:textColorHint">@color/colorMarrom</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
     </style>
 
     <style name="TextTitleHelpLogin">
